--- a/src/components/ReviewItem/ReviewItem.css
+++ b/src/components/ReviewItem/ReviewItem.css
@@ -1,11 +1,9 @@
-
-.product{
+.review__product__container{
     display: flex;
     border-bottom: 1px solid darkmagenta;
     padding: 25px;
 }
 
-.product img{
+.product__image__containe img{
     padding-right: 20px;
 }
-
